<resources>
    <string name="app_name">Estacionamiento</string>

    <!-- Home / RecyclerView -->
    <string name="placa">Placa</string>
    <string name="tipo_auto">Tipo de auto</string>
    <string name="estatus">Estatus</string>
    <string name="hora_ingreso">Hora de ingreso</string>
    <string name="tarifa">Tarifa</string>

    <!-- Autos Detail -->
    <string name="tipo_pago">Tipo de pago </string>
    <string name="fecha_ingreso">Fecha de ingreso</string>
    <string name="hora_salida">Hora de salida</string>
    <string name="titutlo_detalles">Detalles del auto</string>
    <string name="monto">Monto a pagar</string>

    <!-- Add -->
    <string name="oficial_auto">Oficial</string>
    <string name="residente_auto">Residente</string>
    <string name="no_residente_auto">No residente</string>

    <!-- Error -->
    <string name="error_guardado">Error al guardar auto</string>

    <!-- Buttons -->
    <string name="add_auto">Agregar</string>
    <string name="close">Cerrar</string>
    <string name="exit_auto">Salida de auto</string>
    <string name="enter_auto">Entrada de auto</string>

    <!-- Message -->
    <string name="mensaje_pago">El monto a pagar es</string>
    <string name="mensaje_auto_oficial">Puedes salir, no es necesario realizar un pago.</string>
    <string name="mensaje_residente">Tu pago es mensual. Tu monto actual es</string>
</resources>