<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="detailvm"
            type="com.cha.estacionamiento.ui.viewmodel.DetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.DetailActivity">

        <TextView
            android:id="@+id/title_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
            android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
            android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/titutlo_detalles"
            android:textColor="@color/generalWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/x_big_padding"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/x_big_padding"
            android:paddingLeft="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding" >

            <TextView
                android:id="@+id/tv_detail_placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/generalWhite"
                android:fontFamily="@font/poppins_light"
                android:text="@string/placa"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"  tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_detail_tipo_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/tipo_auto"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"  tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_detail_fecha_ingreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/fecha_ingreso"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"   tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_detail_hora_ingreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/hora_ingreso"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"   tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_detail_tarifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/tarifa"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"   tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/estatus"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"   tools:targetApi="o"/>

            <TextView
                android:id="@+id/tv_detail_monto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/generalWhite"
                android:text="@string/monto"
                android:layout_marginTop="@dimen/small_padding"
                android:autoSizeMaxTextSize="@dimen/txt_medium_title_max"
                android:autoSizeMinTextSize="@dimen/txt_medium_title_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
                android:autoSizeTextType="uniform"   tools:targetApi="o"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_auto_exit"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_big_padding"
            android:autoSizeMaxTextSize="@dimen/txt_button_max"
            android:autoSizeMinTextSize="@dimen/txt_button_min"
            android:autoSizeStepGranularity="@dimen/txt_steps_size"
            android:autoSizeTextType="uniform"  tools:targetApi="o"
            android:onClick="@{detailvm::exitAuto}"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/exit_auto"
            android:textAllCaps="false"
            android:textColor="@color/generalWhite"
            app:layout_constraintBottom_toTopOf="@+id/btn_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/big_padding"
            android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginBottom="@dimen/small_padding"/>

        <Button
            android:id="@+id/btn_close"
            android:onClick="@{detailvm::closeDetail}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/close"
            android:autoSizeMaxTextSize="@dimen/txt_general_max"
            android:autoSizeMinTextSize="@dimen/txt_general_min"
            android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
            android:autoSizeTextType="uniform"
            android:textAllCaps="false"
            android:background="@color/transparente"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/small_padding" tools:targetApi="o"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>