<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="addvm"
            type="com.cha.estacionamiento.ui.viewmodel.AddViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.AddActivity">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/x_big_padding"
            android:paddingRight="@dimen/x_big_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <EditText
                android:id="@+id/et_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xx_big_padding"
                android:autoSizeMaxTextSize="@dimen/txt_general_min"
                android:autoSizeMinTextSize="@dimen/txt_general_max"
                android:autoSizeStepGranularity="@dimen/txt_steps_size"
                android:autoSizeTextType="uniform"
                android:autofillHints=""
                android:drawablePadding="@dimen/mili_padding"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/placa"
                android:inputType="text"
                android:text="@={addvm.placaAuto}"
                android:textColorHighlight="@color/generalWhite"
                android:textColorHint="@color/generalWhite"
                android:textColorLink="@color/generalWhite"
                tools:targetApi="o" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb_oficial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oficial_auto"
                    android:onClick="@{addvm::onRadioButtonClicked}"/>
                <RadioButton
                    android:id="@+id/rb_residente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residente_auto"
                    android:onClick="@{addvm::onRadioButtonClicked}"/>
                <RadioButton
                    android:id="@+id/rb_no_residente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_residente_auto"
                    android:onClick="@{addvm::onRadioButtonClicked}"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_login"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_big_padding"
                android:autoSizeMaxTextSize="@dimen/txt_button_max"
                android:autoSizeMinTextSize="@dimen/txt_button_min"
                android:autoSizeStepGranularity="@dimen/txt_steps_size"
                android:autoSizeTextType="uniform"  tools:targetApi="o"
                android:onClick="@{addvm::addAutos}"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/add_auto"
                android:textAllCaps="false"
                android:textColor="@color/generalWhite" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:onClick="@{addvm::closeDetail}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/close"
            android:autoSizeMaxTextSize="@dimen/txt_general_max"
            android:autoSizeMinTextSize="@dimen/txt_general_min"
            android:autoSizeStepGranularity="@dimen/txt_steps_min_size"
            android:autoSizeTextType="uniform"
            android:textAllCaps="false"
            android:background="@color/transparente"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/small_padding" tools:targetApi="o"/>

        <ProgressBar
            android:id="@+id/pb_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>